...
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/forgotpassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/forgot_password"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="8dp"
...
                android:textColor="@color/white"
                android:foreground="?android:attr/selectableItemBackground"
                android:text="Login"
                float:ignore="HardcodedText,UnusedAttribute" />

            <Button
                android:id="@+id/registerHere"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:textColor="@color/white"
                android:background="@drawable/button"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:text="Register"
                float:ignore="HardcodedText,UnusedAttribute" />
        </LinearLayout>
    </RelativeLayout>
</ScrollView>
