...

    <string name="register">Register</string>
    <string name="name">So, what\'s your name ?</string>
    <string name="email_address">Where can we email you at ?</string>
    <string name="password">Pick a super duper secret</string>
    <string name="confirm_password">Prove us you remember the secret</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="logout">Logout</string>
    <string name="dateOfAppoinment">Tell us when you want to book an appointment</string>
    <string name="which_kind_are_you">Which kind are you?</string>
    <string name="tell_us_why_you_would_like_to_have_a_meeting">Tell us why you would like to have a meeting?</string>
    <string name="hh_mm">Enter the time of appointment</string>
    <string name="appointment_date">Enter the date of appointment</string>
...
